# xnqscfg

./: CMakeLists.txt  README.md  sample.xnqscfg  todo.txt
src/: demo.cxx  lexer.cxx  lexer.hxx  xnqscfg.cxx  xnqscfg.hxx
